Aggiunte colonna sinistra con contatti statici e colonna destra con zona di input del messagio e header del contatto attivo;

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
@@ -56,7 +57,7 @@
                             <i class="fa-solid fa-bell-slash"></i>
                         </span>
                     </div>
-                    <div>
+                    <div class="notification-info">
                         <p>Ricevi notifiche di nuovi messaggi</p>
                         <a href="#">Attiva notifiche desktop</a>
                     </div>
@@ -146,7 +147,19 @@
                 </div>
 
                 <div class="text-area">
-                    
+
+                </div>
+
+                <div class="text-input">
+                    <div class="text-emoji">
+                        <i class="fa-regular fa-face-smile"></i>
+                    </div>
+                    <div class="input-sct">
+                        <input type="text" placeholder="Scrivi un messagio" id="">
+                    </div>
+                    <div class="audio-record">
+                        <i class="fa-solid fa-microphone"></i>
+                    </div>
                 </div>
             </div>
             <!-- /CHAT SECTION -->
