Aggiunte sezioni di testo con valori di default e con classi per ricezione e per invio;

--- a/index.html
+++ b/index.html
@@ -147,7 +147,22 @@
                 </div>
 
                 <div class="text-area">
-
+                    <div class="message sent">
+                        <div class="text-message">cioacioacioa1</div>
+                        <div class="message-time">date date date</div>
+                    </div>
+                    <div class="message delivered">
+                        <div class="text-message">cioaci Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni nostrum eveniet necessitatibus, eligendi culpa magnam totam? Soluta ducimus necessitatibus enim itaque culpa fuga omnis saepe dicta modi iusto unde, numquam quidem aliquam qui nisi reiciendis, esse, libero totam nam consectetur. oacioa2</div>
+                        <div class="message-time">date date date</div>
+                    </div>
+                    <div class="message sent">
+                        <div class="text-message">cioacioacioa1</div>
+                        <div class="message-time">date date date</div>
+                    </div>
+                    <div class="message delivered">
+                        <div class="text-message">cioacioacioa2</div>
+                        <div class="message-time">date date date</div>
+                    </div>
                 </div>
 
                 <div class="text-input">
