--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
                     <div class="search-bar">
-                        <input 
-                            v-model="searchUser"
+                        <input
+                            @keyup.enter="findUser()"
+                            v-model.trim="searchUser"
                             type="text" 
                             placeholder="Cerca o inizia una nuova chat" 
                             id="chat-search">
@@ -76,6 +77,7 @@
 
                     <div 
                         v-for="(user, index) in users"
+                        v-show="user.name.toLowerCase().includes(searchUser)"
                         class="chat"
                         @click="activeUser = index">
                         <div class="contact-img">
@@ -84,10 +86,10 @@
                         <div class="contact-info">
                             <div class="status-info">
                                 <h3>{{user.name}}</h3>
-                                <p class="last-message">{{users[index].messages[getLastDate(user)]}}</p>
+                                <p class="last-message">{{getLastMessage(user)}}</p>
                             </div>
                             <div class="date-last-msg">
-                                <p>{{users[index].messages[1].date}}</p>
+                                <p>{{getLastDate(user)}}</p>
                             </div>
                         </div>
                     </div>
@@ -138,7 +140,7 @@
                     <div class="input-sct">
                         <input
                             @keyup.enter="newMessageData()" 
-                            v-model="newMessage" 
+                            v-model.trim="newMessage" 
                             type="text" 
                             placeholder="Scrivi un messagio">
                     </div>
